--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@
   'opsz' 20
 }
 
+* {
+   user-select: none;
+}
+
 html, body {
     margin: 0;
     padding: 0;
@@ -162,4 +166,5 @@ html, body {
             }
         }
     }
+
 }
