--- a/style.css
+++ b/style.css
@@ -75,6 +75,19 @@ html, body {
             }
         }
     }
+    & .canvas-wrapper {
+        position: fixed;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        transition: all 0.3s ease;
+        &.parallel-universe {
+            filter: invert(1);
+            transform: rotateZ(180deg);
+            transform-origin: center center;
+        }
+    }
     & #game {
         --powerup-color: #00000044;
         position: fixed;
